--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,13 +2,13 @@
   <ul>
     <li>name<input type="text" [(ngModel)]="user.name">
     </li>
-    <li>final name<input type="text" [(ngModel)]="user.ogli">
+    <li>final name<input type="text" [(ngModel)]="user.surname">
     </li>
     <li>age<input type="number" min="1" max="100" [(ngModel)]="user.age">
     </li>
       <button (click)="sendUser(user)">submit</button>
     <div *ngIf="receivedUser">
-      <span>{{receivedUser.name}}-{{receivedUser.ogli}}</span><br/>
+      <span>{{receivedUser.name}} {{receivedUser.surname}}</span><br/>
       <span>Возраст: {{receivedUser.age}}</span>
     </div>
   </ul>
