--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,13 +1,11 @@
-<nav class="top-menu">
-  <ul class="menu-main">
-    <li>
-      <a routerLink="">Main</a>
-    </li>
-    <li>
-      <a routerLink="greeting">Greeting</a>
-    </li>
-    <li>
-      <a routerLink="user">User</a>
-    </li>
-  </ul>
-</nav>
+<ul>
+  <li>
+    <a routerLink="main" routerLinkActive="active">Main</a>
+  </li>
+  <li>
+    <a routerLink="greeting" routerLinkActive="active">Greeting</a>
+  </li>
+  <li>
+    <a routerLink="user" routerLinkActive="active">User</a>
+  </li>
+</ul>
