--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,3 +1,4 @@
-<p>
-  main-page works!
-</p>
+<div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <h1 class="display-4">Main Page</h1>
+  <p class="lead">Web app for test your skill.</p>
+</div>
