--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,11 +1,7 @@
-<ul>
-  <li>
-    <a routerLink="main" routerLinkActive="active">Main</a>
-  </li>
-  <li>
-    <a routerLink="greeting" routerLinkActive="active">Greeting</a>
-  </li>
-  <li>
-    <a routerLink="user" routerLinkActive="active">User</a>
-  </li>
-</ul>
+<div class="d-flex flex-column flex-md-row p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+  <nav class="my-2 my-md-0 mr-md-3">
+    <a class="p-2 text-dark" routerLink="main" routerLinkActive="active">Main</a>
+    <a class="p-2 text-dark" routerLink="greeting" routerLinkActive="active">Greeting</a>
+    <a class="p-2 text-dark" routerLink="user" routerLinkActive="active">User</a>
+  </nav>
+</div>
