--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -1,21 +1,36 @@
 <h1 class="text-center">Greeting</h1>
 
-<div class="card card-body offset-3 shadow col-md-6 inline">
-  <div class="mb-3">
-    <label for="name">Введите данные: </label>
-    <input class="form-control" id="name" type="text" [(ngModel)]="name"/>
-  </div>
-  <div class="mb-3">
-    <div *ngIf="greeting.id" class="mb-3">
-      <dl class="row">
-        <dt class="col-sm-4">Идентификатор:</dt>
-        <dd class="col-sm-8">{{greeting.id}}</dd>
+<div class="card card-body offset-3 shadow col-md-6">
 
-        <dt class="col-sm-4">Содержимое:</dt>
-        <dd class="col-sm-8">{{greeting.content}}</dd>
-      </dl>
-    </div>
+  <div class="mb-3">
+    <ul class="list-unstyled">
+      <li *ngFor="let greeting of arrGreeting"
+          [class.selected]="greeting === selectedGreeting"
+          (click)="onSelect(greeting)">
+        <span>{{greeting.id}} </span>
+        <span>{{greeting.name}} </span>
+        <span>{{greeting.lastname}} </span>
+      </li>
+    </ul>
   </div>
-  <button class="btn btn-outline-primary  " (click)="sendName()">Отправить</button>
-  <br>
+
+  <div *ngIf="selectedGreeting" class="mb-3">
+
+    <h3><span class="text-primary">{{selectedGreeting.name | uppercase}}</span> Details</h3>
+    <div><span>ID: </span>{{selectedGreeting.id}}</div>
+    <ul class="list-unstyled">
+      <li>
+        <label>Name:
+          <input [(ngModel)]="selectedGreeting.name" placeholder="name"/>
+        </label>
+      </li>
+      <li>
+        <label>Lastname:
+          <span>{{selectedGreeting.lastname}}</span>
+        </label>
+      </li>
+    </ul>
+
+  </div>
+
 </div>
