--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -2,3 +2,8 @@
   <h1 class="display-4">Main Page</h1>
   <p class="lead">Web app for test your skill.</p>
 </div>
+<div class="mb-3" *ngFor="let news of allNews">
+  <h3>{{news.title}}</h3>
+  <p>{{news.description}}</p>
+  <span class="float-right">{{news.author}} | {{news.date | date:'yyyy-MM-dd'}}</span>
+</div>
