added news view, repository, entity and service

--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -9,7 +9,7 @@
           (click)="onSelect(greeting)">
         <span>{{greeting.id}} </span>
         <span>{{greeting.name}} </span>
-        <span>{{greeting.lastname}} </span>
+        <span>{{greeting.lastName}} </span>
       </li>
     </ul>
   </div>
@@ -25,8 +25,8 @@
         </label>
       </li>
       <li>
-        <label>Lastname:
-          <span>{{selectedGreeting.lastname}}</span>
+        <label>LastName:
+          <span>{{selectedGreeting.lastName}}</span>
         </label>
       </li>
     </ul>
