--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,49 +1,4 @@
 <h1 class="text-center">User Component</h1>
-  <form (ngSubmit)="onSubmit()" #userForm="ngForm" class="card card-body shadow offset-3 col-md-6 mb-3">
-    <div class="mb-3">
-      <label for="firstname">Name: </label>
-      <input class="form-control" id="firstname" type="text" name="name"
-             required
-             [(ngModel)]="user.name"
-             #firstname="ngModel">
-      <div [hidden]="firstname.valid || firstname.pristine" class="text-danger">
-        Name is required
-      </div>
-    </div>
-
-    <div class="mb-3">
-      <label for="lastname">Last name: </label>
-      <input class="form-control" id="lastname" type="text" name="lastname"
-             [(ngModel)]="user.surname">
-    </div>
-
-    <div class="mb-3">
-      <label for="age">Age: </label>
-      <input class="form-control" id="age" type="number" name="age"
-             required
-             [(ngModel)]="user.age"
-             #age="ngModel"
-      >
-      <div class="text-danger" [hidden]="age.valid || age.pristine">
-        Age is required
-      </div>
-    </div>
-
-    <div class="mb-3 form-group">
-      <label for="status">Status: </label>
-      <select class="form-control" id="status" required>
-        <option *ngFor="let stat of status" [value]="stat">{{stat}}</option>
-      </select>
-    </div>
-
-    <div class="mb-3" *ngIf="receivedUser">
-      <h4 class="text-uppercase text-primary">result</h4>
-      <p>ФИО: {{receivedUser.name}} {{receivedUser.surname}}</p>
-      <p>Возраст: {{receivedUser.age}}</p>
-    </div>
-
-    <button type="submit" class="btn btn-outline-primary" [disabled]="!userForm.form.valid"
-            (click)="sendUser(user); userForm.reset()">submit
-    </button>
-
+  <form #userForm="ngForm" class="card card-body shadow offset-3 col-md-6 mb-3">
+    <pre>{{allUser | json}}</pre>
   </form>
