--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navigation></app-navigation>
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<main role="main" class="container">
+    <router-outlet></router-outlet>
+</main>
