--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,22 @@
-<div class="d-flex flex-column flex-md-row p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2 text-dark" routerLink="main" routerLinkActive="active">Main</a>
-    <a class="p-2 text-dark" routerLink="greeting" routerLinkActive="active">Greeting</a>
-    <a class="p-2 text-dark" routerLink="user" routerLinkActive="active">User</a>
-  </nav>
+<div class="p-3 px-md-4 mb-3">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark ">
+  <a class="navbar-brand" href="/main">Navbar</a>
+  <div class="navbar-nav" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="main" routerLinkActive="active">Main</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="greeting" routerLinkActive="active">Greeting</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="user" routerLinkActive="active">User</a>
+      </li>
+    </ul>
+<!--    <form class="form-inline my-2 my-lg-0">-->
+<!--      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
+<!--      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+<!--    </form>-->
+  </div>
+</nav>
 </div>
